fix(Modal): allow overflow to be set by consumer

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -67,7 +67,6 @@
   background-color: var(--modal-background-color);
   padding: 0;
   width: 100%;
-  overflow: hidden;
   animation: fadeIn 0.3s;
 
   @media (min-width: $size-breakpoint-tablet) {
